Fix alignment on table header layout

--- a/admin/client/css/main.css
+++ b/admin/client/css/main.css
@@ -223,7 +223,7 @@ a:-webkit-any-link {text-decoration:none !important;}
 .nav-tabs>li>a:hover {background:none;border:none;color:#555;}
 .s-properties label {font-weight:600;}
 .s-properties .tooltip {width:200px !important;}
-.form-control {color: #767676;height: 30px;box-shadow:none;box-shadow:none;font-weight:normal;font-size:12px;}
+.form-control {color: #767676;height: 30px;box-shadow:none;box-shadow:none;font-weight:normal;font-size:12px;-webkit-border-radius: 3px;}
 
 /*Custom CSS*/
 .s-pannel-group .panel {border:none;border-radius:2px;}
@@ -417,13 +417,15 @@ tabel .s-table-header {margin-bottom:10px;}
 .s-tab-layout.s-tab-layout  > .row > .s-body-box {padding-top:0px;}
 
 /* Custom Slatwall Styles */
-.s-table-header-nav {display:inline-block;width:100%;}
+.s-table-header-nav {display:inline-block;width:100%;margin-top: 30px;}
 .s-table-header-nav ul {vertical-align:bottom;margin-bottom:0px;margin-top:0px;}
 .s-table-header-nav ul > li {vertical-align:bottom;}
 .s-table-header-nav ul > li {padding-right:0px;}
 .s-table-header-nav .fa-level-down {transform: scaleX(-1);-moz-transform: scaleX(-1);-webkit-transform: scaleX(-1);-ms-transform: scaleX(-1);display:inline-block;position: relative;top: 6px;margin-left:20px;}
 .s-table-header-nav .s-table-header-search button {color:#5E5E5E;background-color:#eeeeee;}
-.s-table-header-nav .s-table-view-options {text-align:right;}
+.s-table-header-nav .s-table-view-options {text-align:right;padding-right:0px;}
+.s-table-header-nav .s-table-view-options select {height:28px;margin-left:5px;}
+.s-table-header-nav .s-table-view-options label {line-height: 28px;margin:0px;padding:0px;text-align:right;}
 .s-table-header-nav .s-table-header-search {max-width: 200px;}
 
 .dropdown-toggle .fa-sort-desc:before {top: -2px;position: relative;}
